infra/k8s/core-ledger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-ledger
spec:
  selector:
    app: core-ledger
  ports:
  - port: 80
    targetPort: 8281
  type: ClusterIP
